cmake_minimum_required(VERSION 3.14)
project(Microelectronics-Netlist-Project)

set(CMAKE_CXX_STANDARD 17)

add_executable(Microelectronics-Netlist-Project
        #tree_parser.cpp
        #microelectronics_demo.cpp
        #parentheses.cpp
        #tree_parser_v2.cpp
        #ConsoleApplication15.cpp
        #tree_parser_v3.cpp
        #tre_parser_v4.cpp
        #tree_parser_v5.cpp
        #microtrial.cpp
        #main.cpp
        #test.cpp
        #tree_parser_v6.cpp
        main_v2.cpp
        )